# star-vector

./: pyproject.toml  requirements.txt
docker/: Dockerfile  Image2SVG Generation Example.ipynb
scripts/: quickstart-hf.py  quickstart-vllm.py  quickstart.py
starvector/: adapter.py  clip_model.py  image_encoder.py  util.py
starvector/data/: augmentation.py  base.py  dataset.py  emojisvg.py  figrsvg.py  fontsvg.py  iconsvg.py  stacksvg.py  util.py
starvector/metrics/: base_metric.py  compute_LPIPS.py  compute_SSIM.py  compute_clip_score.py  compute_dino_score.py  compute_fid.py  compute_l2.py  count_token_length.py  metrics.py  util.py
starvector/model/: builder.py  starvector_arch.py
starvector/model/gpt_bigcode/: __init__.py  configuration_gpt_bigcode.py  modeling_gpt_bigcode.py
starvector/model/image_encoder/: image_encoder.py
starvector/model/llm/: starcoder.py  starcoder2.py
starvector/model/models/: starvector_base.py  starvector_v1.py  starvector_v2.py
starvector/serve/: constants.py  controller.py  conversation.py  gradio_demo_with_updated_gradio.py  gradio_web_server.py  model_worker.py  util.py
starvector/serve/vllm_api_gradio/: controller.py  gradio_web_server.py  model_worker.py
starvector/train/: train.py  util.py  zero_to_fp32.py
starvector/validation/: __init__.py  starvector_hf_validator.py  starvector_vllm_api_svg_validator.py  starvector_vllm_svg_validator.py  svg_validator_base.py  validate.py
