[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starvector"
version = "1.0"
description = "Generating Scalable Vector Graphics Code from Images and Text"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", 
    "torchvision", 
    "transformers", 
    "tokenizers", 
    "sentencepiece",    
    "accelerate",
    "pydantic", 
    "markdown2[all]", 
    "numpy", 
    "scikit-learn",
    "gradio", 
    "gradio_client",
    "requests", 
    "httpx", 
    "uvicorn", 
    "fastapi",
    "svgpathtools", 
    "seaborn",
    "taming-transformers", 
    "lpips", 
    "cairosvg", 
    "beautifulsoup4", 
    "webcolors", 
    "tqdm",
    "omegaconf", 
    "open-clip-torch", 
    "noise", 
    "datasets", 
    "scikit-image", 
    "fairscale", 
    "lxml", 
    "torch-fidelity", 
    "clip-openai",
    "scipy", 
    "sentence-transformers",
    "reportlab",
    "svglib",
    "Pillow",
    "protobuf",
    "openai",
    "flash_attn"

]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://starvector.github.io"
"Bug Tracker" = "https://github.com/joanrod/starvector/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
